--- a/estacionamento/WebContent/css/main.css
+++ b/estacionamento/WebContent/css/main.css
@@ -38,6 +38,11 @@ body {
 	margin: 30px 0;
 }
 
+.subsubtitle {
+	font-size: 20px;
+	color: #e60775;
+}
+
 .form-login {
 	align-items: center;
 	background-color: rgba(0, 0, 0, 0.7);
@@ -154,7 +159,7 @@ header>p {
 	align-self: center;
 }
 
-header>p>a {
+a {
 	color: #ccc;
 	font-weight: bold;
 	text-decoration: none;
@@ -163,7 +168,7 @@ header>p>a {
 	-webkit-ransition: all .3s ease-in-out;
 }
 
-header>p>a:hover {
+a:hover {
 	color: #e60775;
 	font-weight: bolder;
 	text-decoration: underline;
